# adexml

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
adexml/: entity.h  errors.cpp  errors.h  unicode.h  xml_parser.cpp  xml_parser.h
